# xCVM

./: .gitignore  DOS_BLD.SH  LICENSE  README.md  build-linux-arm64.sh  build-linux-x64.sh  build-win-x64.ps1  build-win-x64.sh  build.md  clean-obj.ps1  clean-obj.sh  clean-pdb.ps1  clean-pdb.sh  folder.config
scripts/: DOS_BLD.SH  build.sh  cbuild.sh  clean-dbg.sh  clean-obj.sh  clean-pdb.sh  dbuild.sh
src/c/xCVM/: CMakeLists.txt  xCVM.kdev4
src/c/xCVM/xCVM/: CMakeLists.txt  xCVM.c  xCVM.h
src/dotNet/: Directory.Build.props  xCVM.sln
src/dotNet/xCVM.Core/: ASMParser.cs  CallFrame.cs  Constants.cs  ISysCall.cs  Instruct.cs  IxCVMIntrop.cs  ModuleMetadata.cs  ModuleProvider.cs  ProgramPosition.cs  RuntimeData.cs  XCVMResource.cs  xCVM.Core.csproj  xCVMCore.cs  xCVMModule.cs  xCVMObject.cs  xCVMOption.cs  xCVMRTProgram.cs  xCVMemBlock.cs
src/dotNet/xCVM.Core.CompilerServices/: ASMParser.cs  ASMScanner.cs  AssembleResult.cs  AssemblerDefinition.cs  ClosableSegment.cs  CompileError.cs  CompileResult.cs  CompiledxCVMResource.cs  InstructionDefinition.cs  IntermediateInstruct.cs  OperationError.cs  OperationResult.cs  ResourceCompilationResult.cs  ResourceCompiler.cs  ResourceCompilerOptions.cs  ResourceDictionary.cs  SegmentContext.cs  xCVMAssembler.cs
src/dotNet/xCVM.ShellUtilities/: Shell.cs
src/dotNet/xCVM.VM/: Program.cs  xCVM.VM.csproj
src/dotNet/xCVMc/: HEXStream.cs  Program.cs  SourceGenerationContext.cs  xCVMc.csproj
src/dotNet/xCVMc.Data/: PredefiniedAssemblerDefinition.cs  xCVMc.Data.csproj
src/dotNet/xCVMrc/: Program.cs  xCVMrc.csproj
(+138 files in other folders)
